Fix: text align left in location container

--- a/tea-shop/css/style.css
+++ b/tea-shop/css/style.css
@@ -317,3 +317,7 @@ section {
 .customer-icon, .tea-icon {
   margin: 0px 7px 5px 0px;
 }
+
+.location-container div {
+  text-align: left;
+}
